--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -30,12 +30,214 @@
     display: flex;
     gap: 20px;
     margin-bottom: 40px;
+    // flex-wrap: wrap;
+    justify-content: space-between;
     & > div {
-      width: 294px;
-      height: 394px;
-      flex: 1 1;
+      flex-basis: 294px;
+      min-height: 394px;
+      height: auto;
+      // flex-grow: 1;
+      flex-shrink: 1;
       background-position: center;
       border-radius: 20px;
+      display: flex;
+      flex-direction: column;
+      background-repeat: no-repeat;
+      background-size: cover;
+      padding: 32px 30px;
+      & > p {
+        margin-top: auto;
+        color: #fff;
+
+        font-family: Space Grotesk;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+      }
+      a {
+        color: var(--brand-colors-peach, #fbad84);
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+        display: flex;
+        text-decoration: none;
+        width: fit-content;
+        border-bottom: 1px solid var(--brand-colors-peach, #fbad84);
+      }
+    }
+  }
+  .community-impact-section {
+    margin-bottom: 120px;
+    h2 {
+      margin-bottom: 24px;
+      color: var(--dark, #1e1e2f);
+      font-family: Space Grotesk;
+      font-size: 48px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: normal;
+    }
+    .community-impact-section__details {
+      display: flex;
+      align-items: center;
+      gap: 110px;
+    }
+    .top-para {
+      margin-top: 24px;
+      color: var(--dark, #1e1e2f);
+      font-family: Space Grotesk;
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+      max-width: 503px;
+    }
+    h3 {
+      color: var(--grey, #999);
+      font-family: Space Grotesk;
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: normal;
+      margin-bottom: 48px;
+      padding-top: 60px;
+    }
+    .community-impact-section__cards > div {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 24px;
+      .card {
+        padding: 16px;
+        border-radius: 24px;
+        background: var(--lite-yellow, #feedcc);
+        box-shadow: 0px 0px 4px 0px rgba(11, 1, 53, 0.04);
+        width: 294px;
+        height: 182px;
+        position: relative;
+        & > p:first-of-type {
+          color: var(--dark, #1e1e2f);
+          font-family: Space Grotesk;
+          font-size: 40px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: normal;
+        }
+        & > p:nth-of-type(2) {
+          color: var(--dark, #1e1e2f);
+          font-family: Space Grotesk;
+          font-size: 14px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+        }
+        svg {
+          position: absolute;
+          right: 13px;
+          bottom: 18px;
+        }
+      }
+    }
+  }
+  .how-it-works-section {
+    margin-bottom: 120px;
+    h2 {
+      margin-bottom: 24px;
+      color: var(--dark, #1e1e2f);
+      font-family: Space Grotesk;
+      font-size: 48px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: normal;
+    }
+    .how-it-works__details {
+      display: flex;
+      margin-top: 60px;
+      // gap: 216px;
+      align-items: center;
+      justify-content: space-between;
+    }
+    .svg-wrapper {
+      width: 80px;
+      height: 80px;
+      flex-shrink: 0;
+      border-radius: 24px;
+      background: var(--very-lite-purple, #faf9ff);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .cards {
+      display: flex;
+      flex-direction: column;
+      gap: 60px;
+    }
+    .card {
+      display: flex;
+      gap: 18px;
+      align-items: center;
+      position: relative;
+      .works-text {
+        & > p:first-of-type {
+          color: #111;
+          font-family: Space Grotesk;
+          font-size: 28px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: 100.9%; /* 28.252px */
+          margin-bottom: 16px;
+        }
+        & > p:nth-of-type(2) {
+          color: #111;
+          font-family: Space Grotesk;
+          font-size: 18px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 100.9%; /* 18.162px */
+          width: 408px;
+        }
+      }
+      .down-arrow-wrapper {
+        position: absolute;
+        left: 40px;
+        bottom: -62px;
+      }
+    }
+  }
+  .full-width-cards {
+    .talent-card {
+      border-radius: 36px;
+      background: #fdceb5;
+      display: flex;
+      // align-items: center;
+      justify-content: space-between;
+      padding: 60px;
+      align-items: flex-start;
+      .text {
+        display: flex;
+        flex-direction: column;
+        p {
+          margin-top: auto;
+          margin-bottom: 28px;
+        }
+      }
+      h3 {
+        color: var(--text-primary, #1e1e2f);
+        font-family: Space Grotesk;
+        font-size: 36px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 100.9%; /* 36.324px */
+      }
+      p {
+        color: var(--text-secondry, #344054);
+        font-family: Space Grotesk;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 100.9%; /* 24.216px */
+      }
     }
   }
 }
