--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -206,17 +206,19 @@
     }
   }
   .full-width-cards {
+    display: flex;
+    flex-direction: column;
+    gap: 60px;
+    margin-bottom: 120px;
     .talent-card {
       border-radius: 36px;
-      background: #fdceb5;
       display: flex;
-      // align-items: center;
       justify-content: space-between;
       padding: 60px;
-      align-items: flex-start;
       .text {
         display: flex;
         flex-direction: column;
+        align-items: flex-start;
         p {
           margin-top: auto;
           margin-bottom: 28px;
@@ -238,6 +240,90 @@
         font-weight: 400;
         line-height: 100.9%; /* 24.216px */
       }
+    }
+    .peach {
+      background: #fdceb5;
+    }
+    .purple {
+      background: #bdafeb;
+    }
+  }
+  .ceo-message-section {
+    margin-bottom: 120px;
+    h2 {
+      color: var(--dark, #1e1e2f);
+      font-family: Space Grotesk;
+      font-size: 48px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: normal;
+      margin-bottom: 24px;
+    }
+    & > div {
+      margin-top: 75px;
+      display: flex;
+      justify-content: space-between;
+    }
+    .ceo-message-right {
+      border-radius: 24px;
+      background: var(--brand-colors-yellow, #feedcc);
+      padding: 60px;
+      max-width: 40vw;
+    }
+    .ceo-message-text {
+      color: var(--text-primary, #1e1e2f);
+      font-family: Space Grotesk;
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+    }
+    .salary-comparison {
+      display: flex;
+      gap: 40px;
+      margin-top: 46px;
+      margin-bottom: 54px;
+      div {
+        & > p:first-of-type {
+          color: var(--dark, #1e1e2f);
+          font-family: Space Grotesk;
+          font-size: 40px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: normal;
+        }
+        p {
+          color: var(--dark, #1e1e2f);
+          font-family: Space Grotesk;
+          font-size: 14px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+        }
+      }
+    }
+  }
+  .reviews-section {
+    margin-bottom: 102px;
+    h2 {
+      margin-bottom: 24px;
+      color: var(--dark, #1e1e2f);
+      font-family: Space Grotesk;
+      font-size: 48px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: normal;
+    }
+    .top-para {
+      margin-top: 30px;
+      width: 504px;
+      color: #111;
+      font-family: Space Grotesk;
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+      margin-bottom: 40px;
     }
   }
 }
