completed talent screen

--- a/src/components/LookingForNewRolesSection/LookingForNewRolesSection.scss
+++ b/src/components/LookingForNewRolesSection/LookingForNewRolesSection.scss
@@ -3,6 +3,7 @@
   padding: 60px;
   border-radius: 36px;
   background: var(--brand-colors-peach, #fbad84);
+  margin-bottom: 106px;
   & > div:first-of-type {
     flex-basis: 60%;
     gap: 64px;
